audit-service-nats-subscriber-one/spring-database-profile-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-database-profile-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-database-profiles
spec:
  hosts:
  - "*"
  gateways:
  - spring-database-profile-gateway
  http:
  - match:
    - uri:
        prefix: /admin
    route:
    - destination:
        host: springboot-database-profiles
        port:
          number: 9898
